# Sei-Money

./: .env.example  .gitignore  API_DOCUMENTATION.md  CI_CD_SUMMARY.md  COMPETITION_HIGHLIGHTS.md  COMPLETE_USER_GUIDE.md  CREATE_REAL_DATA_GUIDE.md  DEPLOYMENT_GUIDE.md  IMPLEMENTATION_SUMMARY.md  Makefile  PROJECT_OVERVIEW.md  QUICK_START.md  QUICK_TEST_CHECKLIST.md  README.md  REAL_DATA_INTEGRATION_COMPLETE.md  REAL_DATA_INTEGRATION_COMPLETION_REPORT.md  REAL_DATA_INTEGRATION_GUIDE.md  SUCCESS_CRITERIA_VERIFICATION.md  TESTING_REPORT.md  USER_GUIDE.md  USER_TESTING_GUIDE.md  create-real-data-direct.js  execute-transfers-direct.js  package-lock.json  package.json  pnpm-lock.yaml  run.sh  start-all.sh  stop-all.sh  test-backend-transfers.js  test-payments-complete.js  vercel.json
SDK/: .gitignore  CHANGELOG.md  (+15 more)
contracts/: Cargo.toml  DEPLOYED_CONTRACTS.md  DEPLOYMENT.md  DEPLOY_GUIDE.md  FINAL_STATUS.md  IMPLEMENTATION_SUMMARY.md  README.md  deploy.sh  signed_tx.json  signed_wasm_tx.json  temp_tx.json  wallet_import_guide.md  wasm_store_tx.json
contracts/alias/: Cargo.toml
contracts/alias/src/: contract.rs  error.rs  events.rs  msg.rs  state.rs
contracts/alias/tests/: integration.rs  simple_test.rs
contracts/artifacts/: deployment.json
contracts/common/: Cargo.toml
contracts/common/src/: errors.rs  events.rs  lib.rs  math.rs  time.rs  validation.rs
contracts/groups/: Cargo.toml
contracts/groups/src/: contract.rs  error.rs  events.rs  msg.rs  state.rs
contracts/groups/tests/: integration.rs  simple_test.rs
contracts/payments/: Cargo.toml
contracts/payments/examples/: schema.rs
contracts/payments/src/: contract.rs  error.rs  events.rs  lib.rs  msg.rs  state.rs
contracts/payments/tests/: integration.rs
contracts/pots/: Cargo.toml
contracts/pots/src/: contract.rs  error.rs  events.rs  msg.rs  state.rs
contracts/pots/tests/: integration.rs  simple_test.rs
contracts/risk_escrow/: Cargo.toml
contracts/risk_escrow/src/: contract.rs  error.rs  events.rs  msg.rs  state.rs
contracts/risk_escrow/tests/: integration.rs  simple_test.rs
contracts/schema/: seimoney-payments.json
contracts/schema/raw/: execute.json  instantiate.json  query.json  response_to_config.json  response_to_get_transfer.json  response_to_list_by_recipient.json
contracts/scripts/: activate_account.sh  activate_and_deploy.sh  auto_transfer_deploy.sh  check-balance.sh  check-deployment-status.sh  check_balance.sh  check_metamask_balance.sh  deploy-metamask.sh  deploy-simple.sh  deploy.sh  deploy_final.sh  deploy_metamask.sh  deploy_ready.sh  deploy_rest.sh  deploy_sei.sh  deploy_simple_metamask.sh  deploy_with_existing_wallet.sh  final_deploy.sh  fund_wallet.sh  interact-metamask.sh  interact.sh  seid-docker.sh  setup-dev-wallet.sh  simple_deploy.sh  test_contract.sh  test_rpc.sh  transfer_and_deploy.sh  try_faucets.sh
contracts/sdk/: package.json
contracts/sdk/examples/: basic-usage.ts
contracts/sdk/src/: client.ts  index.ts
contracts/vaults/: Cargo.toml
contracts/vaults/src/: contract.rs  error.rs  events.rs  lib.rs  msg.rs  state.rs
(+466 files in other folders)
