[workspace]
members = [
    "common",
    "payments",
    "groups", 
    "pots",
    "alias",
    "risk-escrow",
    "vaults"
]

[workspace.dependencies]
cosmwasm-std = "1.5.0"
cosmwasm-storage = "1.5.0"
cw-storage-plus = "1.2.0"
cw2 = "1.1.0"
schemars = "0.8.16"
serde = { version = "1.0.195", default-features = false, features = ["derive"] }
thiserror = "1.0.56"

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'abort'
incremental = false
overflow-checks = true