[workspace]
members = [
    "payments",
    "groups",
    "pots",
    "alias",
    "risk_escrow",
    "vaults",
]
resolver = "2"

[workspace.package]
edition = "2021"
version = "0.1.0"
authors = ["SeiMoney Contributors"]
license = "MIT"

[workspace.dependencies]
cosmwasm-std = "1.5.0"
cosmwasm-schema = "1.5.0"
cosmwasm-storage = "1.5.0"
cw-storage-plus = "1.2.0"
cw2 = "1.1.0"
thiserror = "1.0"
schemars = "0.8"
serde = { version = "1.0", features = ["derive"] }

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'abort'
incremental = false
overflow-checks = true