[package]
name = "seimoney-groups"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]
name = "seimoney_groups"

[dependencies]
cosmwasm-std.workspace = true
cosmwasm-schema.workspace = true
cosmwasm-storage.workspace = true
cw-storage-plus.workspace = true
cw2.workspace = true
serde.workspace = true
schemars.workspace = true
thiserror.workspace = true
seimoney-common = { path = "../common" }

[dev-dependencies]
cosmwasm-std = { version = "1.5.0", features = ["staking"] }
cw-multi-test = "1.2.0"
