[package]
name = "seimoney-payments"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[features]
default = []
library = []

[dependencies]
cosmwasm-std = { workspace = true }
cosmwasm-storage = { workspace = true }
cw-storage-plus = { workspace = true }
cw2 = { workspace = true }
schemars = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
seimoney-common = { path = "../common" }

[dev-dependencies]
cosmwasm-std = { workspace = true, features = ["testing"] }
cw-multi-test = "0.20.0"